package org.otomotus.backend.config;

/**
 * Enumeracja reprezentująca możliwe statusy aukcji.
 *
 * @author Otomotus Development Team
 * @version 1.0
 */
public enum AuctionStatus {
    ACTIVE,
    PENDING,
    SOLD,
    EXPIRED,
    ARCHIVED
}