package org.otomotus.backend.config;

/**
 * Enumeracja reprezentująca typy paliwa dostępne w systemie.
 *
 * @author Otomotus Development Team
 * @version 1.0
 */
public enum FuelType {
    PETROL, DIESEL, HYBRID, ELECTRIC, LPG
}