package org.otomotus.backend.config;

/**
 * Enumeracja reprezentująca typy skrzyni biegów dostępne w systemie.
 *
 * @author Otomotus Development Team
 * @version 1.0
 */
public enum TransmissionType {
    MANUAL, AUTOMATIC
}